Revision history for Data-Serializable

{{$NEXT}}

0.40.1    2010-10-05 13:15:30 Europe/Oslo
	Fix for RT#61885 (reported by Kaare Rasmussen)
         - XML::Simple serializer didn't work at all.

0.40.0    2010-09-27 17:40:33 Europe/Oslo
	Migrated from Module::Install to Dist::Zilla
	Now uses Semantic Versioning (http://semver.org/)
	 - Hopefully 0.40.0 is equiv. to 0.04 (old-style)
	Fixed test failures wrt. private methods

0.03	2010-04-14
	Added minimum perl version (used Perl::MinimumVersion)
	Updated to Module::Install 0.95
	More JSON tests.
	Fixed bug when trying to deserialize undef.

0.02	2009-05-12
	Fixed missing dependency for testing. Data::Serializer::JSON

0.01    2009-05-12
        Initial release.