@@ -1,6 +1,9 @@
 Revision history for Data-Serializable
 
 {{$NEXT}}
+    Fix for RT#90958 (reported by Upasana Shukla)
+        - Class::MOP::load_class() is deprecated. Replaced with
+          Module::Runtime::require_module().
 
 0.40.1    2010-10-05 13:15:30 Europe/Oslo
 	Fix for RT#61885 (reported by Kaare Rasmussen)
